<resources>
    <string name="app_name">CryptoSpy</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_profile">Profile</string>
    <string name="title_tab_favorite">Favorite</string>
    <string name="text_title_favorite">Favorite</string>
    <string name="text_coin_symbol">Btc</string>
    <string name="text_coin_name">Bitcoin</string>
    <string name="text_delete">Hapus</string>
    <string name="text_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_profile">Profile</string>
    <string name="text_input_name">Nope</string>
    <string name="text_register">Register</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_desc_regis">Stay alert and wise in the world of Crypto</string>
    <string name="name_app">CryptoSpy</string>
    <string name="desc_app">Welcome to World of Crypto</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_save_profile">Save profile</string>
    <string name="text_change_profile_success">Change profile success!</string>
    <string name="text_change_profile_failed">Change profile failed</string>
    <string name="text_want_to_logout">Do you want to logout ?</string>
    <string name="text_open_in_coingecko">Open In CoinGecko</string>
    <string name="text_data_empty_or_not_available">data empty or not available</string>
    <string name="text_trending_title">Trending Coins</string>
    <string name="text_slogan_crypto">Be a Pioneer in Crypto Investment</string>
    <string name="text_welcome_user">Hi %1$s</string>
    <string name="text_empty_coin_favorite">Tidak ada coin favorit</string>
</resources>